<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:fillViewport="true"
    tools:context=".EditPasswordActivity"
    tools:showIn="@layout/activity_edit_password">
    <android.support.constraint.ConstraintLayout
    android:id="@+id/constraintLayoutEdit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/text_view_title"
        android:labelFor="@id/editTextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/buttonSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_website"
        android:labelFor="@id/editTextWebsite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle" />

    <EditText
        android:id="@+id/editTextWebsite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/buttonSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWebsite" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:text="@string/button_sign_in"
            android:textColor="@color/design_default_color_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWebsite" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_view_email"
            android:labelFor="@id/editTextEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextWebsite" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toStartOf="@+id/buttonSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_username"
        android:labelFor="@id/editTextUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/buttonSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/editTextPassword"
            android:text="@string/text_view_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextUsername" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@id/textViewTags"
            app:layout_constraintEnd_toStartOf="@id/buttonSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPassword"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/imageButtonGenerate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/image_button_generate"
            android:tint="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonCopy"
            app:layout_constraintStart_toEndOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
            app:srcCompat="@android:drawable/ic_lock_idle_lock" />

        <ImageButton
            android:id="@+id/imageButtonCopy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/image_button_copy"
            android:tint="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButtonGenerate"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
            app:srcCompat="?attr/actionModeCopyDrawable" />

    <TextView
        android:id="@+id/textViewTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_view_tags"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextCreateTag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint= ""
        app:layout_constraintEnd_toStartOf="@id/buttonSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTags"/>

        <ImageButton
            android:id="@+id/imageButtonAddTag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/image_button_add_tag"
            android:tint="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/imageButtonCopy"
            app:layout_constraintTop_toBottomOf="@+id/textViewTags"
            app:srcCompat="@android:drawable/ic_input_add" />

        <LinearLayout
            android:id="@+id/linearLayoutId"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/textViewNotes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextCreateTag" />

    <TextView
        android:id="@+id/textViewNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_view_notes"
        android:layout_marginTop="128dp"
        android:labelFor="@+id/editTextNotes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:maxLines="3"
        android:gravity="top|start"
        app:layout_constraintBottom_toTopOf="@id/buttonDeletePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotes" />

    <Button
        android:id="@+id/buttonDeletePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="@string/button_delete_password"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintTop_toBottomOf="@id/editTextNotes"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
</ScrollView>